# research-worlds-envs

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CURRENT_STATE.md  DECISION_LOG.md  E1_MATRIX.md  MUNDOS_DINAMICOS_CONTEXT.md  NORTH_STAR.md  README.md  REDTEAM.md  WIKI.md  pyproject.toml
docs/: candado-selectivo.md  como-medimos.md  failure-modes.md  hint_run_v0.97_results.json  lectura-de-fuentes.md  mundo-a-primera-historia.md  mundo-espejo-klayman-ha.md  mundos-por-vicio.md  open-questions.md  proto-designer.md  red-team.md  roadmap.md  validity_run_v0.95_results.json
hooks/: pre-commit
notebooks/: anatomia-del-sistema.ipynb
scripts/: analyze_hint_0118.py  analyze_sonda_0143.py  analyze_sonda_0145.py  analyze_sonda_0147.py  check_decision_log.py  exp_fork_0133.py  exp_fork_smoke.py  exp_hint_0118.py  exp_hint_autopsy_0127.py  exp_probe_0135.py  exp_probe_0135_stage2.py  exp_sonda_0143.py  exp_sonda_0145.py  exp_sonda_0147.py  fork_0133_analyze.py  fork_0133_blind_pack.py  preflight_0145.py  probe_0135_analyze.py  probe_0135_analyze_stage2.py  probe_0135_audit_d59.py  probe_0135_build.py  redteam_score_0137.py  run_medio_batch.py  vicio_vivo_0138.py
tests/: conftest.py  test_batch_effect.py  test_c2_solvers.py  test_censoring.py  test_certificates.py  test_contracts.py  test_doc_headers.py  test_events.py  test_factory_generalization.py  test_functionals.py  test_generic_certify_legal.py  test_harness_server.py  test_harness_wiring.py  test_ladder_l1.py  test_opaque_kernel.py  test_register_verb.py  test_report.py  test_sandbox_redteam.py  test_scale_sanity.py  (+10 more)
(+570 files in other folders)
