[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wager"
version = "0.1.0"
description = "WAGER - Worlds As Generators of Epistemic Reward: synthetic worlds for training investigative judgment"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Agent/solver side ONLY (LLM-facing). NEVER a dependency of wager.reward.
agent = [
    "openai>=1.40",
    "python-dotenv",
]
# Human-inspection report generator (tooling; not in the reward path).
report = [
    "markdown",
]

[tool.setuptools.packages.find]
include = ["wager*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: tests costosos (L2 varianza, etc.); correr con -m slow o sin filtro",
]
